added new stop condition

--- a/resources/config.properties
+++ b/resources/config.properties
@@ -5,7 +5,7 @@
 character.class = Assassin2
 
 #Initial population
-population.size = 2000
+population.size = 200
 
 #Selection
 #Types : CompoundSelection, BoltzmannSelection, DeterministicTournamentSelection , EliteSelection
@@ -30,9 +30,9 @@ crossover.type = UniformCrossover
 crossover.parameter = 0.5
 
 #Algorithm Stop Condition
-#Types : NGenerations
-algorithmStopCondition.type = NGenerations
-algorithmStopCondition.parameter = 100
+#Types : NGenerations FittingLimit Structure Content
+algorithmStopCondition.type = Content
+algorithmStopCondition.parameter = 10000
 
 
 #Substitution
