added another stop condition(nearoptimum)

--- a/resources/config.properties
+++ b/resources/config.properties
@@ -30,9 +30,9 @@ crossover.type = UniformCrossover
 crossover.parameter = 0.5
 
 #Algorithm Stop Condition
-#Types : NGenerations FittingLimit Structure Content
-algorithmStopCondition.type = Content
-algorithmStopCondition.parameter = 10000
+#Types : NGenerations NearOptimum Structure Content
+algorithmStopCondition.type = NearOptimum
+algorithmStopCondition.parameter = 31
 
 
 #Substitution
