--- a/resources/config.properties
+++ b/resources/config.properties
@@ -2,7 +2,7 @@
 
 #Character class
 #Types : Assassin1 , Assassin2 , Warrior1 , Warrior2 , Warrior3 , Archer1 , Archer2 , Defensor1 , Defensor2
-character.class = Assassin2
+character.class = Defensor1
 
 #Initial population
 population.size = 200
@@ -11,17 +11,17 @@ population.size = 200
 #Types : CompoundSelection, BoltzmannSelection, DeterministicTournamentSelection , EliteSelection
 #       ProbabilisticTournamentSelection , RankingSelection , RouletteSelection , UniversalSelection
 selection.type = CompoundSelection
-selection.parameter = 0.7
-selection.method1.type = BoltzmannSelection
+selection.parameter = 0.8
+selection.method1.type = RouletteSelection
 selection.method1.parameter = 400
-selection.method2.type = DeterministicTournamentSelection
+selection.method2.type = EliteSelection
 selection.method2.parameter = 2
 
 
 #Mutation
 #Types :  ClassicMutation , NotUniformMutation
-mutation.type = ClassicMutation
-mutation.parameter = 0.3
+mutation.type = NotUniformMutation
+mutation.parameter = 0.01
 
 
 #Crossover
@@ -31,17 +31,17 @@ crossover.parameter = 0.5
 
 #Algorithm Stop Condition
 #Types : NGenerations NearOptimum Structure Content
-algorithmStopCondition.type = NearOptimum
-algorithmStopCondition.parameter = 31
+algorithmStopCondition.type = Content
+algorithmStopCondition.parameter = 1000
 
 
 #Substitution
 #Types : Substitution1 , Substitution2 , Substitution3
-substitution.type = Substitution2
+substitution.type = Substitution1
 substitution.parameter = 0.5	
 substitution.selection.type = CompoundSelection
-substitution.selection.parameter = 0.7
+substitution.selection.parameter = 0.8
 substitution.selection.method1.type = BoltzmannSelection
 substitution.selection.method1.parameter = 400
-substitution.selection.method2.type = DeterministicTournamentSelection
+substitution.selection.method2.type = EliteSelection
 substitution.selection.method2.parameter = 2
