--- a/resources/config.properties
+++ b/resources/config.properties
@@ -30,9 +30,9 @@ crossover.type = UniformCrossover
 crossover.parameter = 0.5
 
 #Algorithm Stop Condition
-#Types : NGenerations NearOptimum Structure Content
-algorithmStopCondition.type = Content
-algorithmStopCondition.parameter = 1000
+#Types : NGenerations NearOptimum MinStructure NStructure Content
+algorithmStopCondition.type = NStructure
+algorithmStopCondition.parameter = 5
 
 
 #Substitution
