--- a/resources/config.properties
+++ b/resources/config.properties
@@ -21,7 +21,7 @@ selection.method2.parameter = 2
 #Mutation
 #Types :  ClassicMutation , NotUniformMutation
 mutation.type = NotUniformMutation
-mutation.parameter = 0.00
+mutation.parameter = 0.03
 
 
 #Crossover
@@ -31,13 +31,13 @@ crossover.parameter = 0.5
 
 #Algorithm Stop Condition
 #Types : NGenerations NearOptimum MinStructure NStructure Content
-algorithmStopCondition.type = NStructure
-algorithmStopCondition.parameter = 2
+algorithmStopCondition.type = Content
+algorithmStopCondition.parameter = 1000
 
 
 #Substitution
 #Types : Substitution1 , Substitution2 , Substitution3
-substitution.type = Substitution1
+substitution.type = Substitution2
 substitution.parameter = 0.5	
 substitution.selection.type = CompoundSelection
 substitution.selection.parameter = 0.8
@@ -45,3 +45,7 @@ substitution.selection.method1.type = BoltzmannSelection
 substitution.selection.method1.parameter = 400
 substitution.selection.method2.type = EliteSelection
 substitution.selection.method2.parameter = 2
+
+#Diversity Calculator
+#Types : StatDiversityCalculator , ItemDiversityCalculator
+diversityCalculator.type = StatDiversityCalculator
