--- a/resources/config.properties
+++ b/resources/config.properties
@@ -5,7 +5,7 @@
 character.class = Defensor1
 
 #Initial population
-population.size = 200
+population.size = 20
 
 #Selection
 #Types : CompoundSelection, BoltzmannSelection, DeterministicTournamentSelection , EliteSelection
@@ -21,7 +21,7 @@ selection.method2.parameter = 2
 #Mutation
 #Types :  ClassicMutation , NotUniformMutation
 mutation.type = NotUniformMutation
-mutation.parameter = 0.03
+mutation.parameter = 0.08
 
 
 #Crossover
@@ -37,7 +37,7 @@ algorithmStopCondition.parameter = 1000
 
 #Substitution
 #Types : Substitution1 , Substitution2 , Substitution3
-substitution.type = Substitution2
+substitution.type = Substitution1
 substitution.parameter = 0.5	
 substitution.selection.type = CompoundSelection
 substitution.selection.parameter = 0.8
@@ -48,4 +48,4 @@ substitution.selection.method2.parameter = 2
 
 #Diversity Calculator
 #Types : StatDiversityCalculator , ItemDiversityCalculator
-diversityCalculator.type = StatDiversityCalculator
+diversityCalculator.type = ItemDiversityCalculator
