--- a/resources/config.properties
+++ b/resources/config.properties
@@ -2,7 +2,7 @@
 
 #Character class
 #Types : Assassin1 , Assassin2 , Warrior1 , Warrior2 , Warrior3 , Archer1 , Archer2 , Defensor1 , Defensor2
-character.class = Defensor1
+character.class = Assassin2
 
 #Initial population
 population.size = 20
@@ -10,7 +10,7 @@ population.size = 20
 #Selection
 #Types : CompoundSelection, BoltzmannSelection, DeterministicTournamentSelection , EliteSelection
 #       ProbabilisticTournamentSelection , RankingSelection , RouletteSelection , UniversalSelection
-selection.type = CompoundSelection
+selection.type = RouletteSelection
 selection.parameter = 0.8
 selection.method1.type = RouletteSelection
 selection.method1.parameter = 400
@@ -21,7 +21,7 @@ selection.method2.parameter = 2
 #Mutation
 #Types :  ClassicMutation , NotUniformMutation
 mutation.type = NotUniformMutation
-mutation.parameter = 0.08
+mutation.parameter = 0.0
 
 
 #Crossover
@@ -31,7 +31,7 @@ crossover.parameter = 0.5
 
 #Algorithm Stop Condition
 #Types : NGenerations NearOptimum MinStructure NStructure Content
-algorithmStopCondition.type = Content
+algorithmStopCondition.type = NGenerations
 algorithmStopCondition.parameter = 1000
 
 
@@ -47,5 +47,5 @@ substitution.selection.method2.type = EliteSelection
 substitution.selection.method2.parameter = 2
 
 #Diversity Calculator
-#Types : StatDiversityCalculator , ItemDiversityCalculator
-diversityCalculator.type = ItemDiversityCalculator
+#Types : StatDiversityCalculator , ItemDiversityCalculator, FitnessDiversityCalculator
+diversityCalculator.type = FitnessDiversityCalculator
