fix on ranking selection

--- a/resources/config.properties
+++ b/resources/config.properties
@@ -10,8 +10,8 @@ population.size = 20
 #Selection
 #Types : CompoundSelection, BoltzmannSelection, DeterministicTournamentSelection , EliteSelection
 #       ProbabilisticTournamentSelection , RankingSelection , RouletteSelection , UniversalSelection
-selection.type = RouletteSelection
-selection.parameter = 0.8
+selection.type = ProbabilisticTournamentSelection
+selection.parameter = 0.5
 selection.method1.type = RouletteSelection
 selection.method1.parameter = 400
 selection.method2.type = EliteSelection
@@ -21,7 +21,7 @@ selection.method2.parameter = 2
 #Mutation
 #Types :  ClassicMutation , NotUniformMutation
 mutation.type = NotUniformMutation
-mutation.parameter = 0.0
+mutation.parameter = 0.01
 
 
 #Crossover
@@ -32,14 +32,14 @@ crossover.parameter = 0.5
 #Algorithm Stop Condition
 #Types : NGenerations NearOptimum MinStructure NStructure Content
 algorithmStopCondition.type = NGenerations
-algorithmStopCondition.parameter = 1000
+algorithmStopCondition.parameter = 100
 
 
 #Substitution
 #Types : Substitution1 , Substitution2 , Substitution3
-substitution.type = Substitution1
+substitution.type = Substitution2
 substitution.parameter = 0.5	
-substitution.selection.type = CompoundSelection
+substitution.selection.type = RankingSelection
 substitution.selection.parameter = 0.8
 substitution.selection.method1.type = BoltzmannSelection
 substitution.selection.method1.parameter = 400
@@ -48,4 +48,4 @@ substitution.selection.method2.parameter = 2
 
 #Diversity Calculator
 #Types : StatDiversityCalculator , ItemDiversityCalculator, FitnessDiversityCalculator
-diversityCalculator.type = FitnessDiversityCalculator
+diversityCalculator.type = StatDiversityCalculator
