--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -45,3 +45,7 @@ substitution.selection.method1.type = BoltzmannSelection
 substitution.selection.method1.parameter = 400
 substitution.selection.method2.type = EliteSelection
 substitution.selection.method2.parameter = 2
+
+#Diversity Calculator
+#Types : StatDiversityCalculator , ItemDiversityCalculator, FitnessDiversityCalculator
+diversityCalculator.type = StatDiversityCalculator
